fix overflow

--- a/app/assets/stylesheets/application/cambiu.scss
+++ b/app/assets/stylesheets/application/cambiu.scss
@@ -1218,6 +1218,7 @@ body#cambiu {
     display: flex;
     justify-content: center;
     align-items: center;
+    max-width: 100%;
     div {
       white-space: nowrap;
       margin-right: 5px;
